--- a/src/pages/signup/index.css
+++ b/src/pages/signup/index.css
@@ -1,18 +1,8 @@
-body {
-  font-family: "Inter", sans-serif;
-}
-
 .login {
   position: relative;
   z-index: 100;
 }
 
-.background-bg {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 35%;
-  background: linear-gradient(135deg, #6A00F4, #B72EC3);
-  clip-path: polygon(0 35%, 100% 0, 100% 100%, 0% 100%);
+.background {
+  background: #daffff url(https://img.bosszhipin.com/static/file/2022/zlqc2m9fao1667185843533.png) bottom / 100% auto no-repeat;
 }
