--- a/src/pages/plan/index.css
+++ b/src/pages/plan/index.css
@@ -3,3 +3,9 @@
   height: 100%;
   /* background: url(https://img.bosszhipin.com/static/file/2022/zlqc2m9fao1667185843533.png) bottom / 100% auto no-repeat; */
 }
+
+.plan .container {
+  padding: 8px;
+  background-color: #fff;
+  border-radius: 8px;
+}
